welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:4: error: type mismatch;
 found   : Unit
 required: Boolean
		rep = ( c >= b )
                    ^inOrder:6: error: type mismatch;
 found   : Unit
 required: Boolean
		rep = ( ( c >= b ) & ( b >= a ) )
                    ^