welcome.lessons.welcome.bat.bool2.InOrder.scala.code
def inOrder(a:Int, b:Int, c:Int, bOk:Boolean):Boolean = {
	var rep = false
	if (bOk) {
		rep = ( c >= b )
	} else {
		rep = ( ( c >= b ) & ( b >= a ) )
	}
}
